kustomize/deploy/overlays/dev/ingress_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-deploy
spec:
  rules:
    - host: k8s-dev.deploy
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-deploy
                port:
                  name: http
